@@ -1,3 +1,11 @@
+2001-02-23  Arik Devens  <arik@eazel.com>
+
+	reviewed by: John Sullivan  <sullivan@eazel.com>
+
+	* src/nautilus-application.c: (nautilus_application_startup):
+	Rewriting of the "Reboot" dialog so as to also suggest trying
+	nautilus-clean.sh -x.
+
 2001-02-23  Seth Nickell  <seth@eazel.com>
 
 	reviewed by: Pavel Cisler <pavel@eazel.com>
